# speed-dreams

./: CMakeLists.txt  TODO.txt
cmake/: FindGLM.cmake  checks.cmake  customthirdparty.cmake  install.cmake  internaldeps.cmake  macros.cmake  options.cmake  robot.cmake  splitargn.cmake
doc/changelogs/: 1.4.0.txt  2.0.0.txt  2.1.0.txt
doc/design/: icon.xcf.bz2  sd-splash-091010-02.xcf.bz2
doc/design/car-logos/: car-boxer-logo-typo.xcf.bz2  car-cavallo-typo-logo.xcf.bz2  car-fmc-logo.xcf.bz2  car-kanagawa-logo-typo.xcf.bz2  car-kongei-logo-typo.xcf.bz2  car-lynx-logo-typo.xcf.bz2  car-murasama-logo-typo.xcf.bz2  car-newcastle-typo-logo.xcf.bz2  car-silber-logo-typo.xcf.bz2  car-spirit-logo-typo.xcf.bz2  car-toro-logo-typo.xcf.bz2  car-vieringe-logo-typo.xcf.bz2  car-vortex-logo-typo.xcf.bz2
doc/design/flags/: outline-template.xcf.bz2
doc/develdoc/: module_init.txt  robot_features.txt  tracklights.txt
doc/develdoc/profiling/: cml2_mo2_sgl1_simuv2_debug_20100510_log.txt  cml2_mo2_sgl1_simuv3_debug_20100510_log.txt
doc/doxygen/: doc.conf.in  doc.h  header.html
doc/faq/: faq.html
doc/tutorials/track/: index.html
doc/userman/: how_to_drive.html
doc/website/: deprecated-index.html  index.php
doc/website/src/: speed-dreams.css
packaging/3rdParty-devel/: CMakeLists.txt  TODO.txt  readme.txt
packaging/3rdParty-devel/patches/: FreeSOLID-2.1.2.CMakeLists.txt  SDL_dinputhaptic.c.patched  enet-1.3.13.CMakeLists.txt  expat-2.2.0-CMakeLists.txt  freetype-2.5.3.CMakeLists.txt  jpeg-9a.CMakeLists.txt  jpeg-9b.CMakeLists.txt  libogg-1.3.2.CMakeLists.txt  libvorbis-1.3.5.CMakeLists.txt  osg-3.4.0.types.txt  plib-1.8.5.CMakeLists.txt  sdl-1.2.15.CMakeLists.txt
packaging/OSX/: Info.plist  installer-mac-2.2.xcf.bz2  sd-icon-mac-256.icns  sd-icon-mac-256.xcf.bz2
packaging/desura/: build_desura_package.sh  fix_rpath.patch  readme.txt
packaging/loki/: README  icon.xpm
packaging/loki/setup.data/: setup.xml
packaging/sources/: build.sh  sd-src-base.lst  sd-src-exclude.lst  sd-src-hq-cars-and-tracks.lst  sd-src-more-hq-cars-and-tracks.lst  sd-src-unmaintained.lst  sd-src-wip-cars-and-tracks.lst
packaging/windows/: speed-dreams-base.nsi  speed-dreams-hq-cars-and-tracks.nsi  speed-dreams-more-hq-cars-and-tracks.nsi  speed-dreams-unmaintained.nsi  speed-dreams-wip-cars-and-tracks.nsi  speed-dreams.nsh
src/drivers/: CMakeLists.txt
src/drivers/K1999/: CMakeLists.txt  K1999.cpp
src/drivers/bt/: CMakeLists.txt  bt.cpp  cardata.cpp  driver.cpp  driver.h  learn.cpp  learn.h  opponent.cpp  pit.cpp  strategy.cpp  strategy.h
src/drivers/dandroid/: CMakeLists.txt
src/drivers/human/: human.cpp
src/drivers/hymie/: CMakeLists.txt  cardata.cpp  cardata.h  correct.cpp  correct.h  driver.cpp  driver.h  hymie.cpp  learn.cpp  learn.h  linalg.h  name.h  opponent.cpp  opponent.h  pit.cpp  pit.h  strategy.cpp  strategy.h
src/drivers/kilo2008/: cardata.cpp  cardata.h  kdriver.cpp  kdriver.h  kilo2008.cpp  linalg.h  opponent.cpp  opponent.h  pit.cpp  pit.h  raceline.cpp  raceline.h  spline.cpp  spline.h  strategy.cpp  strategy.h
src/drivers/networkhuman/: networkhuman.cpp
src/drivers/replay/: CMakeLists.txt  replay.cpp
src/drivers/shadow/: CMakeLists.txt
src/drivers/simplix/: CMakeLists.txt
src/drivers/urbanski/: CMakeLists.txt  driver.cpp  driver.h  geoutil.cpp  geoutil.h  trackproc.cpp  trackproc.h  urbanski.cpp
src/drivers/usr/: CMakeLists.txt
src/interfaces/: camera.h  car.h  graphic.h  igraphicsengine.h  iphysicsengine.h  iraceengine.h  isoundengine.h  itrackloader.h  iuserinterface.h  playerpref.h  raceman.h  replay.h  robot.h  sound.h  telemetry.h  track.h
src/libs/: CMakeLists.txt
src/libs/learning/: ANN.cpp  ANN.h  CMakeLists.txt  Distribution.cpp  Distribution.h  List.h  MathFunctions.cpp  MathFunctions.h  ann_policy.h  learning.h  policy.cpp  policy.h
src/libs/math/: CMakeLists.txt  linalg_t.h  straight2_t.h  v2_t.h  v3_t.h
src/libs/portability/: CMakeLists.txt  portability.h
src/libs/robottools/: CMakeLists.txt  robottools.h  rthumandriver.cpp  rttelem.cpp  rttrack.cpp
src/libs/tgf/: CMakeLists.txt  application.cpp  directory.cpp  eventloop.cpp  file.cpp  filesetup.cpp  formula.cpp  hash.cpp  legacymodule.cpp  linuxspec.cpp  memmanager.cpp  modinfo.cpp  modinfo.h  module.cpp  os.cpp  os.h  osspec.h  params.cpp  straight2_t.h  tgf.cpp  tgf.h  tgf.hpp  trace.cpp  windowsspec.cpp  windowsspec.h
src/libs/tgfclient/: CMakeLists.txt  control.cpp  forcefeedback.cpp  forcefeedback.h  glfeatures.cpp  glfeatures.h  gui.cpp  gui.h  guiapplication.cpp  guibutton.cpp  guiedit.cpp  guieventloop.cpp  guifont.cpp  guifont.h  guihelp.cpp  guiimage.cpp  guilabel.cpp  guimenu.cpp  guimenu.h  guiobject.cpp  guiscreen.cpp  guiscreen.h  guiscrollbar.cpp  guiscrollist.cpp  guitexture.cpp  musicplayer.cpp  musicplayer.h  oggsoundstream.cpp  oggsoundstream.h  openalmusicplayer.cpp  openalmusicplayer.h  soundstream.cpp  soundstream.h  tgfclient.cpp  tgfclient.h
src/libs/tgfdata/: CMakeLists.txt  cars.cpp  cars.h  drivers.cpp  drivers.h  race.cpp  race.h  racemanagers.cpp  racemanagers.h  tgfdata.cpp  tgfdata.h  tracks.cpp  tracks.h
src/libs/txml/: xml.cpp  xml.h
src/main/: CMakeLists.txt  main.cpp
src/modules/csnetworking/: CMakeLists.txt  csclient.cpp  csnetwork.cpp  csnetwork.h  cspack.cpp  cspack.h  csrobotxml.cpp  csrobotxml.h  csserver.cpp
src/modules/networking/: CMakeLists.txt  client.cpp  network.cpp  network.h  robotxml.cpp  robotxml.h  server.cpp
src/tools/accc/: ac3dgroup.cpp  ac3dload.cpp  accc.h  mainaccc.cpp
src/tools/blender/: acc3d_export.py  acc3d_import.py
src/tools/ceguidemo/: README.txt  ceguidemo.project  configuration.py  constants.py  dialogs.py  errors.py  gui.py  input.py  main.py  menu.py  menucarselect.py  menucredits.py  menufactory.py  menuloading.py  menumain.py  menumanager.py  menuoptions.py  menuprofiles.py  menuresults.py  menustandard.py  menutrackselect.py  video.py
src/tools/menuview/: CMakeLists.txt  main.cpp  previewmenu.cpp  previewmenu.h
src/tools/nfs2ac/: mainnfs2ac.cpp
src/tools/nfsperf/: CMakeLists.txt  (+1 more)
(+551 files in other folders)
